2006-12-13  Bastien Nocera  <hadess@hadess.net>

	* browser-plugin/org_gnome_totem_PluginViewer.xml:
	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_error),
	(totem_embedded_set_state), (totem_embedded_set_href),
	(totem_embedded_launch_player), (on_open1_activate),
	(on_copy_location1_activate), (on_video_button_press_event),
	(totem_embedded_construct), (main):
	Move launching the external player to the viewer, set the HREF
	cursor correctly
	* browser-plugin/totemPlugin.cpp: move the player launching to the
	viewer, and set the "cursor" in the viewer when pushing the HREF
	to the viewer
	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_open_thread): Close the stream before propagating
	the error through a signal

2006-12-13  Bastien Nocera  <hadess@hadess.net>

	* src/backend/bacon-video-widget-xine.c:
	(bacon_video_widget_open_async_error),
	(bacon_video_widget_open_thread), (bacon_video_widget_open_async),
	(bacon_video_widget_open_with_subtitle),
	(bacon_video_widget_close): open fd://0 async, so that it doesn't
	block waiting for data to come in, fixes the browser plugin with
	xine-lib (Closes: #375866)
	* src/backend/bvw-test.c: (test_bvw_set_mrl), (on_redirect),
	(on_eos_event), (error_cb), (main):
	catch errors, fix up indent

2006-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c: (cb_gconf):
	  Fix copy'n'pasto and update the buffer-size when the buffer-size key
	  is changed, not the buffering threshold. (Closes: #382350)

2006-12-11  Tim-Philipp Müller  <tim at centricular dot net>

	* src/backend/bacon-video-widget-gst-0.10.c:
	(bacon_video_widget_new):
	  Fix nonsensical code; don't overwrite speaker setup preferences
	  saved in gconf with default values when run in metadata or
	  capture mode. (Closes: #379740)

2006-12-11  Bastien Nocera  <hadess@hadess.net>

	* src/totem-playlist.c: (totem_playlist_clear):