@@ -1,3 +1,9 @@
+2006-12-14  Christian Persch  <chpe@cvs.gnome.org>
+
+	* browser-plugin/totem-plugin-viewer.c: (totem_embedded_set_href),
+	(totem_embedded_launch_player):
+	Fix DBUS method return values. Bug #385572.
+
 2006-12-13  Bastien Nocera  <hadess@hadess.net>
 
 	* browser-plugin/org_gnome_totem_PluginViewer.xml:
